# Rust-Chess-Engine

./: Cargo.toml  README.md
.cargo/: config.tom.l
src/: main.rs
src/chess/: arbiter.rs  bitboard.rs  board.rs  board_state.rs  consts.rs  mod.rs  move_generator.rs  move_list.rs  move_maker.rs  move_ply.rs  piece_list.rs
src/chess/precomputed/: accessor.rs  data_dump.rs  mod.rs
src/chess/precomputed/generators/: helpers.rs  inbetween.rs  mod.rs  movement_mask.rs  slider_lookup.rs  zobrist.rs
src/chess/types/: color.rs  file.rs  mod.rs  move_flag.rs  piece.rs  rank.rs  square.rs
src/engine/: arbiter.rs  capture_history.rs  counter_move_heuristics.rs  history_heuristics.rs  killers.rs  mod.rs  search.rs  search_funcs.rs  search_limits.rs  see.rs  thread.rs  transposition.rs
src/engine/eval/: accumulator.rs  mod.rs  network.rs  nnue.rs
src/engine/types/: match_result.rs  mod.rs  tt_flag.rs
src/general/: bits.rs
src/precomputed/: accessor.rs  data_dump.rs  mod.rs
src/precomputed/generators/: helpers.rs  lmr_reduction.rs  mod.rs  movement_mask.rs  slider_lookup.rs  zobrist.rs
src/uci/: commands.rs  mod.rs  option_table.rs  parser.rs
