cargo-features = ["profile-rustflags"]
[toolchain]
channel = "nightly"

[package]
name = "ChessEngine"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.7.2"
#cozy-chess = "0.3.4"

[profile.release]
opt-level = 3
rustflags = [
    "-C", "link-arg=-Wl,--stack,8000000",
    "-C", "target-cpu=native"
]